# brAIn

./: .env.example  .gitignore  BMAD-FIX-PLAN.md  CLAUDE.md  README.md  SESSION-HANDOFF.md  SESSION-RECOVERY-PROTOCOL.md  brAIn-Development-Tasks-Reference.md  docker-compose.prod.yml  docker-compose.yml  install.py  main.py  requirements.txt  run_tests.sh  verify_installation.sh
.bmad-core/: SESSION-RECOVERY-PROMPT.md  install-manifest.yaml
.bmad-core/commands/: session-end.md
.bmad-core/tasks/: session-handoff.md
.github/workflows/: production-deploy.yml
RAG-Pipeline-Discovery/Phase1-Discovery-Documentation/: 00-Phase1-Executive-Summary.md  01-Repository-Overview.md  02-Project-Context-Analysis.md  03-Critical-Files-Index.md
RAG-Pipeline-Discovery/Phase2-Technical-DeepDive/: 00-Phase2-Executive-Summary.md  01-Core-Processing-Engine.md  02-Database-Vector-Storage.md  03-Google-Drive-Integration.md  04-Complete-Data-Flow-Analysis.md
RAG-Pipeline-Discovery/Phase3-Operational-Understanding/: 00-Phase3-Executive-Summary.md  01-Complete-Setup-Guide.md  02-Configuration-Management.md  03-Monitoring-Troubleshooting.md
RAG-Pipeline-Discovery/Phase4-Knowledge-Synthesis/: 00-Complete-Discovery-Summary.md  01-RAG-Pipeline-Complete-Analysis.md  02-Key-Insights-Summary.md
analytics/: cost_analytics.py
api/: __init__.py  analytics.py  folders.py  health.py  search.py  websocket_endpoints.py
backend/: dependency-tree-analysis.txt  docker-build-analysis.txt  docker-detailed-analysis.txt  main.py  mypy-comprehensive-report.txt  mypy-final-report.txt  mypy-full-report.txt  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  test-collection-report.txt  test-run-report.txt
backend/app/api/: __init__.py  analytics.py  auth.py  config.py  folders.py  health.py  processing.py  search.py  websocket_endpoints.py
backend/app/config/: __init__.py  models.py  settings.py  sql_generator.py  templates.py  validators.py  wizard.py
backend/app/core/: __init__.py  database_handler.py  duplicate_detector.py  processing_orchestrator.py  quality_assessor.py  text_processor.py
backend/app/cost/: __init__.py  analytics.py  budget_manager.py  cost_calculator.py  cost_system.py  optimizer.py  token_counter.py
backend/app/middleware/: __init__.py  auth_middleware.py  rate_limiting.py  security_middleware.py
backend/app/monitoring/: budget_manager.py  cost_calculator.py  langfuse_client.py  llm_tracker.py
backend/app/processing/: error_intelligence.py  file_classification.py  format_optimization.py  intelligent_processor.py  quality_assessment.py  rules_engine.py
backend/app/realtime/: message_broadcaster.py  subscription_handlers.py  supabase_client.py  websocket_manager.py
backend/app/search/: context_ranking.py  document_suggestions.py  hybrid_search.py  search_analytics.py  search_history.py  semantic_search_engine.py
backend/app/utils/: error_handlers.py
backend/app/validators/: custom_validators.py
backend/migrations/: 003_monitoring_tables.sql  005_knowledge_graph_schema.sql
backend/scripts/: health-check.py
backend/seeds/: development_data.sql
backend/tests/: conftest.py  test_configuration_wizard.py  test_cost_minimal.py  test_cost_system.py  test_cost_system_basic.py  test_enhanced_pipeline.py  test_langfuse_integration.py
backend/tests/ai_validation/: test_ai_performance.py  test_ai_quality_scoring.py  test_config_assistant.py  test_cost_calculations.py  test_graph_accuracy.py  test_search_relevance.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/security/: test_authentication_security.py  test_comprehensive_security_validation.py  test_input_validation.py
backend/tests/test_intelligent_processing/: test_intelligent_processor.py
backend/tests/test_knowledge_graph/: test_builder.py
backend/tests/unit/: test_core_simple.py  test_database_handler.py  test_text_processor.py
brAIn-RAG/docs/: implementation-roadmap.md  monitoring-architecture.md  prd-v2.md  prd.md  project-brief.md
config/: __init__.py  package.json  pyproject.toml  settings.py  sql_generator.py  validators.py
core/: __init__.py  database_handler.py  duplicate_detector.py  processing_orchestrator.py  text_processor.py
database/: __init__.py  connection.py
deployment/: README.md  docker-compose.prod.yml
deployment/monitoring/: prometheus.yml
deployment/production/: Dockerfile  supervisord.conf
deployment/secrets/: .env.production.example  validate_secrets.py
deployment/ssl/: Caddyfile
docker/: Dockerfile  README.md  supervisord.conf
docs/: security_guidelines.md
docs/admin/: README.md
docs/api/: README.md
docs/examples/: README.md
docs/onboarding/: README.md
docs/troubleshooting/: README.md
docs/user_guide/: README.md  deployment-basic.md  quick-start.md
frontend/: fix-imports.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
middleware/: auth_middleware.py
migrations/: 001_enhanced_schema.sql  002_knowledge_graph.sql  004_indexes_and_functions.sql  README.md
models/: README.md  api.py  base.py  core.py  examples.py  monitoring.py
monitoring/: budget_manager.py  langfuse_client.py
realtime/: message_broadcaster.py  websocket_manager.py
scripts/: backup_restore.sql  health-check.py
security/audit_results/: security_audit_report.md
security/compliance_docs/: gdpr_compliance_assessment.md
security/remediation_plans/: critical_vulnerabilities_remediation.md
src/cost/: analytics.py  cost_calculator.py  optimizer.py
src/knowledge_graph/: builder.py  entities.py  queries.py  relationships.py  storage.py
src/monitoring/: anomaly_detection.py  auto_recovery.py  capacity_planning.py  intelligent_alerts.py  predictive.py  recovery_workflows.py
src/processing/: format_optimization.py  rules_engine.py
src/search/: context_ranking.py  search_history.py
tests/: TEST_SUMMARY.md  test_configuration_wizard.py  test_cost_minimal.py  test_enhanced_pipeline.py  test_langfuse_integration.py
(+62 files in other folders)
